--- a/index.html
+++ b/index.html
@@ -1,44 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>trello-releasenotes by devtyr</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="trello-releasenotes : A Trello release notes generator for node.js" />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>trello-releasenotes</title>
   </head>
+
   <body>
 
-      <header>
-        <h1>trello-releasenotes</h1>
-        <p>A Trello release notes generator for node.js</p>
-      </header>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/devtyr/trello-releasenotes">View on GitHub</a>
 
-      <div id="banner">
-        <span id="logo"></span>
+          <h1 id="project_title">trello-releasenotes</h1>
+          <h2 id="project_tagline">A Trello release notes generator for node.js</h2>
 
-        <a href="https://github.com/devtyr/trello-releasenotes" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/devtyr/trello-releasenotes/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/devtyr/trello-releasenotes/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/devtyr/trello-releasenotes/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/devtyr/trello-releasenotes/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <p>A trello release notes generator for node.js</p>
 
 <h2>Installation</h2>
@@ -258,12 +250,16 @@ No release notes available!
 
 <p><a href="http://coderwall.com/devtyr"><img src="http://api.coderwall.com/devtyr/endorsecount.png" alt="endorse"></a></p>
       </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/devtyr">devtyr</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">trello-releasenotes maintained by <a href="https://github.com/devtyr">devtyr</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -274,6 +270,7 @@ No release notes available!
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
+
 
   </body>
 </html>
