Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,224 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>A trello release notes generator for node.js</p>
-
-<h2>Installation</h2>
-
-<p>You can install it using <code>npm</code>.</p>
-
-<pre><code>npm install trello-releasenotes
-</code></pre>
-
-<h3>Obtain a Trello token</h3>
-
-<p>First, log in to Trello and open <a href="https://trello.com/1/appKey/generate" title="Generate API Keys">Generate API Keys</a>. You'll receive an key to use in the next step.</p>
-
-<p>Second, call <a href="https://trello.com/1/authorize?key=YOUR_KEY&amp;name=trello-releasenotes&amp;expiration=never&amp;response_type=token">https://trello.com/1/authorize?key=YOUR_KEY&amp;name=trello-releasenotes&amp;expiration=never&amp;response_type=token</a> to grant access for this application. Be sure to replace <code>YOUR_KEY</code> with the key received in the first step.</p>
-
-<blockquote>
-<p>For further information visit: <a href="https://trello.com/docs/gettingstarted/index.html#getting-a-token-from-a-user" title="Getting a Token from a User">Getting a Token from a User</a></p>
-</blockquote>
-
-<p>Store the key from the first action in setting <code>applicationKey</code> of <code>settings.json</code> and the token received from the second step in <code>userToken</code>.</p>
-
-<h2>Usage</h2>
-
-<p>There are some settings you can set up in <code>settings.json</code>:</p>
-
-<pre><code>applicationKey      Insert your obtained application key from Trello to get access to it
-userToken           Define your user token you'll receive when obtaining an application ey
-boardId             Define the id of the board you want to search for release notes
-releaseIdentifier   Default is set to 'RELEASE:'
-template            Defines the template to use
-exportLinks         if true, links are written to the exported data; the default template is able to handle that
-exportPath          Set a path if release notes should be exported to a specific path
-strings             These are used to create the export, translate them into your language if you want
-</code></pre>
-
-<blockquote>
-<p><code>version</code> and <code>product</code> of <code>strings</code> are used to generate the filename. </p>
-</blockquote>
-
-<h3>How to obtain the board id</h3>
-
-<p>When you open your Trello account you get a list of boards, open one of it and the URL will be something like</p>
-
-<pre><code>https://trello.com/board/boardname/identifier
-</code></pre>
-
-<p>Copy <code>identifier</code> and set this one as the <code>boardId</code> in <code>settings.json</code>. This is used to search for lists if there is no command line option that overrides that setting.</p>
-
-<h3>Export</h3>
-
-<p>To export release notes start it like shown bellow:</p>
-
-<pre><code>node index.js -g [LISTNAME(S)]
-</code></pre>
-
-<p>Replace <code>[LISTNAME(S)]</code> with the name of your list that contains the cards and release note for export. In this case the configured <code>boardId</code> from <code>settings.json</code> will be used to find the internal id of <code>[LISTNAME(S)]</code>. In case you have different boards, you can override the configured <code>boardId</code> by using the <code>-b</code> option.</p>
-
-<pre><code>node index.js -g [LISTNAME(S)] -b [BOARDID]
-</code></pre>
-
-<p>If you want to run a job updating your release notes it might be helpful to set the version by an parameter. This can be done by using the parameter <code>-v</code>.</p>
-
-<pre><code>node index.js -g [LISTNAME(S)] -b [BOARDID] -v [VERSION]
-</code></pre>
-
-<h3>Example</h3>
-
-<p>To export all release notes of list 'Done' execute</p>
-
-<pre><code>node index.js -g Done
-</code></pre>
-
-<p>It is also possible to export release notes of several lists. Call it like this:</p>
-
-<pre><code>node index.js -g "My List 1, My List 2"
-</code></pre>
-
-<p>This will search <code>My List 1</code> and <code>My List 2</code> for cards having release notes.</p>
-
-<p>Please note that the result is a <code>.markdown</code> file that can be processed with other modules like <a href="https://github.com/devtyr/ideamark" title="ideamark">ideamark</a> or <a href="https://github.com/Bonuspunkt/mdserv" title="mdserv">mdserv</a>. In this combination you can directly serve your exported release notes via HTTP.</p>
-
-<h3>Which cards will be exported?</h3>
-
-<p>All cards of the given list having comments that start with <code>RELEASE:</code> (default) are exported. If there are multiple entries having this "flag", all of them are exported. You are able to change this setting in <code>settings.json</code>, change <code>releaseIdentifier</code> to a value you like to use.</p>
-
-<blockquote>
-<p>Please note that all lists (also archived ones) are considered.</p>
-</blockquote>
-
-<h3>Show available lists</h3>
-
-<p>In some cases it is very helpful to view the lists available within the configured board. To get an overview use the option <code>-l</code> or <code>--list</code>:</p>
-
-<pre><code>node index.js -l
-</code></pre>
-
-<p>This will come up with a complete list, showing the status (open, closed), list id and the name. It's also possible to get a list of a specific status. This options are available:</p>
-
-<pre><code>node index.js -l all       The same as -l without a parameter
-node index.js -l open      Shows all lists that are not archived.
-node index.js -l closed    Shows all archieved lists
-</code></pre>
-
-<h2>Usage from other modules</h2>
-
-<p>It is also possible to use this module from another one. For example to receive all cards having release notes for the specified lists:</p>
-
-<pre><code>var TrelloReceiver = require('./lib/cardreceiver.js');
-
-var lists = ["list1", "list2"];
-var receiver = new TrelloReceiver("applicationKey", "userToken", "boardId");
-
-receiver.receive(lists, function(err, cards) {
-    if (err) {
-        // handle error
-    }
-
-    // do something with your cards here
-});
-</code></pre>
-
-<p>It's also possible to work with lists:</p>
-
-<pre><code>receiver.getLists(filter, function(error,data) {
-    if (error) {
-        console.log(error instanceof Error ? error.message : error);
-    } else {
-        if (data) {
-            for (var i = 0; i &lt; data.length; i++) {
-                console.log((data[i].closed ? '[closed] ' : '[open]   ') + data[i].id + ' ' + data[i].name);
-            }
-        }
-
-    }
-});
-</code></pre>
-
-<p>The filter defines (if set) which lists to be received. Possible values based on the Trello API:</p>
-
-<ul>
-<li>none</li>
-<li>open</li>
-<li>closed</li>
-<li>all</li>
-</ul><h2>Templating</h2>
-
-<p><strong>trello-releasenotes</strong> uses <a href="https://github.com/raycmorgan/Mu">Mu - a fast, streaming Node.js Mustache engine</a> as the templating engine. Have a look at the <a href="http://mustache.github.com/mustache.5.html">documentation</a> to get familiar with Mustache. A simple template (it's the default of trello-releasenotes):</p>
-
-<pre><code># {{header}} {{product}}
-{{version}} **{{version_number}}**
-
-{{generated}} **{{date}}**
-
-
-## {{subheader}}
-
-{{#data}}
-**{{name}}**
-{{#labels}}  `{{name}}` {{/labels}}
-
-{{#releasenotes}}
-&gt; {{singleNote}}
-
-
-{{/releasenotes}}
-{{/data}}
-{{^data}}
-No release notes available!
-{{/data}}
-</code></pre>
-
-<p>As you are able to configure the used templates within <code>settings.json</code> you can add new templates easily. Otherwise feel free to change the existing ones.</p>
-
-<p>This is the available structure for templating:</p>
-
-<pre><code>{
-    "header": "",
-    "product": "",
-    "version": "",
-    "version_number": "",
-    "generated": "",
-    "date": "",
-    "subheader": "",
-    "data": 
-        [
-            {
-                "name": "",
-                "labels": "",
-                "link": "",
-                "releasenotes": 
-                    [
-                        { "singleNote": "" }
-                    ]
-            }
-        ]
-}
-</code></pre>
-
-<p><code>data</code> is an array of all found cards. <code>releasenotes</code> is an array of all release notes found for the card.</p>
-
-<h2>Upcoming Features</h2>
-
-<ul>
-<li>Generation of HTML and PDF output</li>
-<li>Option to receive all lists for configured/specified board id</li>
-</ul><p>If there are bugs or ideas for this project please leave a ticket <a href="https://github.com/devtyr/trello-releasenotes/issues">here</a>.</p>
-
-<h2>Continuous Integration status</h2>
-
-<p>This project is tested with <a href="http://travis-ci.org/">Travis CI</a>.</p>
-
-<p><a href="http://travis-ci.org/devtyr/trello-releasenotes"><img src="https://secure.travis-ci.org/devtyr/trello-releasenotes.png" alt="Build Status"></a></p>
-
-<h2>License</h2>
-
-<p>trello-releasenotes is licensed under MIT.</p>
-
-<p><a href="http://coderwall.com/devtyr"><img src="http://api.coderwall.com/devtyr/endorsecount.png" alt="endorse"></a></p>
+        <p>Find the project page here: <a href="http://devtyr.com/trello-releasenotes.html">trello-releasenotes Project Page</a></p>
       </section>
     </div>
 
